--- a/css/layout.css
+++ b/css/layout.css
@@ -41,22 +41,18 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-
+    .full-screen-block {
+        width: 80%;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-}
+@media only screen and (min-width: 992px) {}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .block {
         width: 33%;
-    }
-
-    .full-screen-block {
-        width: 80%;
     }
 }
 
